--- a/public/loader.css
+++ b/public/loader.css
@@ -8,6 +8,12 @@
   inset-inline-start: calc(50% - 500px);
 }
 
+@media only screen and (max-width: 480px) and (orientation: portrait) {
+  .loading-logo {
+    display: none;
+  }
+}
+
 .pre-loading {
   position: absolute;
   box-sizing: border-box;
